Fixed alignment issues of the side menu

--- a/scss/views/nav/side-menu.scss
+++ b/scss/views/nav/side-menu.scss
@@ -43,13 +43,12 @@
         @include uppercase-bold-font();
         font-size: 12px;
         letter-spacing: 3px;
-        .icon {
+        .icon-wrapper {
+          float: left;
+          width: 20px;
           vertical-align: middle;
           margin-right: 20px;
           font-size: 16px;
-        }
-        span {
-          vertical-align: middle;
         }
       }
     }
